Attempt to fix sticky footer on iOS

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -22,9 +22,6 @@ html {
 body {
   margin: 0;
   padding: 0;
-  /* sticky footer fix */
-  padding-bottom: 9em;
-  /* sticky footer fix end */
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.5;
