--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -8,19 +8,12 @@
   margin-left: 0;
   margin-right: 0;
   width: 100%;
-  clear: both;
-  /* sticky footer fix start */
-  position: absolute;
-  left: 0em;
-  bottom: 0em;
-  height: auto;
-  /* sticky footer fix end */
   margin-top: 2em;
   color: $muted-text-color;
   -webkit-animation: $intro-transition;
-          animation: $intro-transition;
+  animation: $intro-transition;
   -webkit-animation-delay: 0.45s;
-          animation-delay: 0.45s;
+  animation-delay: 0.45s;
   background-color: $footer-background-color;
   border-top: 1px solid $light-gray;
 
